--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -16,26 +16,20 @@ builds:
       - darwin
     goarch:
       - amd64
+      - arm64
 archives:
   -
-    name_template: "{{ .Binary }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
     replacements:
       darwin: Darwin
       linux: Linux
       windows: Windows
       386: i386
       amd64: x86_64
-    format: binary
-  -
-    id: homebrew
-    name_template: "{{ .Binary }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
-    replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
-    format: zip
+    format_overrides:
+    - goos: windows
+      format: zip
+snapshot:
+  name_template: "{{ .Tag }}-next"
 checksum:
   name_template: 'checksums.txt'
 changelog:
@@ -50,12 +44,5 @@ brews:
     owner: bringg
     name: homebrew-honey
   folder: Formula
-  url_template: "https://github.com/bringg/honey/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
   homepage: "https://github.com/bringg/honey"
   description: "DevOps tool to help find an instance in sea of clouds."
-  # IDs of the archives to use.
-    # Defaults to all.
-  ids:
-  - foo
-  - bar
-  - shmar
