--- a/ui/package.json
+++ b/ui/package.json
@@ -9,12 +9,15 @@
     "jsonpath": "^1.1.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
-    "ra-data-json-server": "^3.19.0",
+    "ra-data-json-server": "^4.2.1",
     "react": "^17.0.2",
-    "react-admin": "^3.19.0",
+    "react-admin": "^4.2.2",
     "react-dom": "^17.0.2",
     "react-json-view": "^1.21.3",
+    "react-redux": "^8.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
